--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icona.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizza Spartaco - Pizza al taglio artigianale a Roma</title>
     <meta name="description" content="Pizza Spartaco offre pizza al taglio artigianale con ingredienti freschi e di qualità. Ordina online per consegna a domicilio o ritiro in negozio. Impasto lievitato 48 ore." />
