Update viewport meta tag for better responsiveness

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icona.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
     <title>Pizza Spartaco - Pizza al taglio artigianale a Roma</title>
     <meta name="description" content="Pizza Spartaco offre pizza al taglio artigianale con ingredienti freschi e di qualità. Ordina online per consegna a domicilio o ritiro in negozio. Impasto lievitato 48 ore." />
     <meta name="keywords" content="pizza al taglio, pizza roma, consegna pizza, asporto pizza, pizza artigianale" />
