--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icona.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-    <title>Pizza Spartaco - Pizza al taglio artigianale a Roma</title>
-    <meta name="description" content="Pizza Spartaco offre pizza al taglio artigianale con ingredienti freschi e di qualità. Ordina online per consegna a domicilio o ritiro in negozio. Impasto lievitato 48 ore." />
-    <meta name="keywords" content="pizza al taglio, pizza roma, consegna pizza, asporto pizza, pizza artigianale" />
+    <title>Pizza Spartaco - La vera pizza Romana </title>
+    <meta name="description" content="Nel cuore di Roma nasce la pinsa Romana certificata, consegna a domicilio in 20 min" />
+    <meta name="keywords" content="pizza al taglio, pizza romana,pinsa,  pizza roma, consegna pizza, asporto pizza, pizza artigianale, pinsa, pizza, pinsa romana, consegna pinsa" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Pizza Spartaco - Pizza al taglio artigianale" />
-    <meta property="og:description" content="Pizza al taglio artigianale con ingredienti freschi. Consegna a domicilio in 30-40 minuti." />
+    <meta property="og:title" content="Pizza Spartaco - La vera pizza Romana" />
+    <meta property="og:description" content="Nel cuore di Roma nasce la pinsa Romana certificata, consegna a domicilio in 20 min." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://images.pexels.com/photos/2147491/pexels-photo-2147491.jpeg?auto=compress&cs=tinysrgb&w=1200" />
+    <meta property="og:image" content="/sezionefotohome/img1.jpeg" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Pizza Spartaco - Pizza al taglio artigianale" />
-    <meta name="twitter:description" content="Pizza al taglio artigianale con ingredienti freschi. Consegna a domicilio in 30-40 minuti." />
-    <meta name="twitter:image" content="https://images.pexels.com/photos/2147491/pexels-photo-2147491.jpeg?auto=compress&cs=tinysrgb&w=1200" />
+    <meta name="twitter:title" content="Pizza Spartaco - La vera Pizza Romana" />
+    <meta name="twitter:description" content="Nel cuore di Roma nasce la pinsa Romana certificata, consegna a domicilio in 20 min" />
+    <meta name="twitter:image" content="/sezionefotohome/img1.jpeg" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800;900&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700;800;900&family=Oswald:wght@500;600;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
